--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Quadro de Anúncios Digital | Congregação Caboto</title>
@@ -11,26 +12,26 @@
 
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="assets/css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="assets/css/style.css">
 
@@ -41,11 +42,12 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 		<div id="fh5co-aside" style="background-image: url(assets/images/image_1.jpg)">
 			<div class="overlay"></div>
@@ -60,11 +62,11 @@
 			</div>
 		</div>
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<img src="assets/images/project-1.jpg" alt="Reuniao Vida e Ministerio">
 					<div>
-						<span class="fh5co-post-date">Maio e Junho, 2024</span>
+						<span class="fh5co-post-date">Maio a Agosto, 2024</span>
 						<h2><a href="pages/vida_ministerio.html">Reuniões Teocráticas</a></h2>
 						<p>Designações das Partes na Reunião do Meio de Semana e Discursos Públicos</p>
 					</div>
@@ -73,7 +75,7 @@
 				<div class="fh5co-entry padding">
 					<img src="assets/images/project-2.jpg" alt="Atividades Mecânicas">
 					<div>
-						<span class="fh5co-post-date">Maio e Junho, 2024</span>
+						<span class="fh5co-post-date">Maio a Setembro, 2024</span>
 						<h2><a href="pages/mecanicas.html">Atividades Mecânicas</a></h2>
 						<p>Atividade de Cada Irmão nas Reuniões</p>
 					</div>
@@ -82,7 +84,7 @@
 				<div class="fh5co-entry padding">
 					<img src="assets/images/project-3.jpg" alt="Serviço de Campo">
 					<div>
-						<span class="fh5co-post-date">Maio e Junho, 2024</span>
+						<span class="fh5co-post-date">Ano de 2024</span>
 						<h2><a href="pages/servicos.html">Programação do Serviço de Campo</a></h2>
 						<p>Dias de Campo e Dirigentes e Programação do Testemunho Público</p>
 					</div>
@@ -98,7 +100,8 @@
 				</div>
 				<footer>
 					<div>
-						&copy; 2024 - Made with love by <a href="https://github.com/marinhotjr" target="_blank">@marinhotjr</a>
+						&copy; 2024 - Made with love by <a href="https://github.com/marinhotjr"
+							target="_blank">@marinhotjr</a>
 					</div>
 				</footer>
 			</div>
@@ -108,7 +111,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="assets/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -122,6 +125,6 @@
 	<!-- Main -->
 	<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
