--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -65,7 +65,8 @@
 		</div>
 
 		<div class="fh5co-navigation">
-			<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(../assets/images/project-4.jpg)">
+			<div class="fh5co-cover prev fh5co-cover-sm"
+				style="background-image: url(../assets/images/project-5.jpg); border-right: 1px solid black;">
 				<div class="overlay"></div>
 				<a class="copy" href="#congresso">
 					<div class="display-t">
@@ -99,7 +100,7 @@
 					<div class="anuncios">
 						<h3><a name="congresso"><strong>Anúnio Sobre Congresso Regional das Testemunhas de
 									Jeová</strong></a></h3>
-						<h4>O Tema do Nosso Próximo Congresso é <a
+						<h4 style="color: black;">O Tema do Nosso Próximo Congresso é <a
 								href="https://www.jw.org/pt/testemunhas-de-jeova/congressos/" target="_blank">"Declare
 								as Boas Novas!"</a></h4>
 						<p>Prezados irmãos,</p>
@@ -124,6 +125,38 @@
 							<em>Data da visita:</em><strong> de 30 de Julho a 04 de Agosto de 2024.</strong>
 						</p>
 						<p>Superintendente de Circuito - <strong>Divanildo Mercês</strong></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
+						<h3><a name="reuniao_especial"><strong>Anúncio Sobre a Reunião Especial</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que haverá uma reunião especial
+							transmitida ao vivo para todas as congregações do país <em>no</em>
+							<strong> Sábado, 15 de Fevereiro de 2025.</strong>
+						</p>
+						<p>O horário será informado mais a frente.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
+						<h3><a name="celebracao"><strong>Celebração da Morte de Cristo</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informar as datas das duas próximas
+							Celebraçação da Morte de Cristo.</p>
+
+						<p>No ano de <strong>2025</strong> - A Celebração será realizada no <strong>Sábado, 12 de
+								Abril</strong></p>
+						<p>No ano de <strong>2026</strong> - A Celebração será realizada na <strong>Quinta-feira, 02 de
+								Abril</strong></p>
 					</div>
 				</div>
 			</div>
