--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -65,7 +65,8 @@
 		</div>
 
 		<div class="fh5co-navigation">
-			<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(../assets/images/project-4.jpg)">
+			<div class="fh5co-cover prev fh5co-cover-sm"
+				style="background-image: url(../assets/images/project-5.jpg); border-right: 1px solid black;">
 				<div class="overlay"></div>
 				<a class="copy" href="#mecanicas">
 					<div class="display-t">
@@ -178,6 +179,7 @@
 				<div class="fh5co-entry padding">
 					<h2 style="text-align: center;"><a name="ensino"><strong>Presidência aos Sábados e Leitor de A
 								Sentinela</strong></a></h2>
+					<h4 style="text-align: center; color: black;"><strong>Mês de Maio</strong></h4>
 					<table class="table table-striped">
 						<thead class="thead-dark">
 							<tr>
@@ -206,6 +208,148 @@
 								<th scope="row">25/05</th>
 								<td>Paulo Henrique</td>
 								<td>Dielson Paz</td>
+							</tr>
+						</tbody>
+					</table>
+
+					<h4 style="text-align: center; color: black;"><strong>Mês de Junho</strong></h4>
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Presidente</th>
+								<th scope="col">Leitor de A Sentinela</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">01/06</th>
+								<td>Elísio Chagas</td>
+								<td>Josenildo</td>
+							</tr>
+							<tr>
+								<th scope="row">08/06</th>
+								<td>Mário Júnior</td>
+								<td>Marcos Vitor</td>
+							</tr>
+							<tr>
+								<th scope="row">15/06</th>
+								<td>Paulo Henrique</td>
+								<td>Claudemiro Rodrigues</td>
+							</tr>
+							<tr>
+								<th scope="row">22/06</th>
+								<td>Claudemiro Rodrigues</td>
+								<td>Paulo Henrique</td>
+							</tr>
+							<tr>
+								<th scope="row">29/06</th>
+								<td>José Raimundo</td>
+								<td>Dielson Paz</td>
+							</tr>
+						</tbody>
+					</table>
+
+					<h4 style="text-align: center; color: black;"><strong>Mês de Julho</strong></h4>
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Presidente</th>
+								<th scope="col">Leitor de A Sentinela</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">06/07</th>
+								<td>Mário Júnior</td>
+								<td>Josenildo</td>
+							</tr>
+							<tr>
+								<th scope="row">13/07</th>
+								<td>Elísio Chagas</td>
+								<td>Claudemiro Rodrigues</td>
+							</tr>
+							<tr>
+								<th scope="row">20/07</th>
+								<td>Paulo Henrique</td>
+								<td>Dielson Paz</td>
+							</tr>
+							<tr>
+								<th scope="row">27/07</th>
+								<td style="color: red;"><strong>CONGRESSO</strong></td>
+								<td style="color: red;"><strong>CONGRESSO</strong></td>
+							</tr>
+						</tbody>
+					</table>
+
+					<h4 style="text-align: center; color: black;"><strong>Mês de Agosto</strong></h4>
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Presidente</th>
+								<th scope="col">Leitor de A Sentinela</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">03/08</th>
+								<td>José Raimundo</td>
+								<td>Paulo Henrique</td>
+							</tr>
+							<tr>
+								<th scope="row">10/08</th>
+								<td>Claudemiro Rodrigues</td>
+								<td>Marcos Vitor</td>
+							</tr>
+							<tr>
+								<th scope="row">17/08</th>
+								<td>Elísio Chagas</td>
+								<td>Josenildo</td>
+							</tr>
+							<tr>
+								<th scope="row">24/08</th>
+								<td>Mário Júnior</td>
+								<td>Dielson Paz</td>
+							</tr>
+							<tr>
+								<th scope="row">31/08</th>
+								<td>Paulo Henrique</td>
+								<td>Claudemiro Rodrigues</td>
+							</tr>
+						</tbody>
+					</table>
+
+					<h4 style="text-align: center; color: black;"><strong>Mês de Setembro</strong></h4>
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Presidente</th>
+								<th scope="col">Leitor de A Sentinela</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">07/09</th>
+								<td>José Raimundo</td>
+								<td>Dielson Paz</td>
+							</tr>
+							<tr>
+								<th scope="row">14/09</th>
+								<td>Mário Júnior</td>
+								<td>Josenildo</td>
+							</tr>
+							<tr>
+								<th scope="row">21/09</th>
+								<td>Paulo Henrique</td>
+								<td>Marcos Vitor</td>
+							</tr>
+							<tr>
+								<th scope="row">28/09</th>
+								<td>Elísio Chagas</td>
+								<td>Paulo Henrique</td>
 							</tr>
 						</tbody>
 					</table>
