--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -65,7 +65,8 @@
 		</div>
 
 		<div class="fh5co-navigation">
-			<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(../assets/images/project-4.jpg)">
+			<div class="fh5co-cover prev fh5co-cover-sm"
+				style="background-image: url(../assets/images/project-5.jpg); border-right: 1px solid black;">
 				<div class="overlay"></div>
 				<a class="copy" href="#semanal">
 					<div class="display-t">
@@ -80,7 +81,7 @@
 			</div>
 			<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(../assets/images/project-5.jpg)">
 				<div class="overlay"></div>
-				<a class="copy" href="#">
+				<a class="copy" href="#carrinho">
 					<div class="display-t">
 						<div class="display-tc">
 							<div>
@@ -98,48 +99,30 @@
 				<div class="fh5co-entry padding">
 					<h2 style="text-align: center;"><a name="semanal"><strong>Programação Semanal de Campo</strong></a>
 					</h2>
-					<table class="table table-striped table-dark">
-						<thead>
-							<tr>
-								<th scope="col">Dias</th>
-								<th scope="col">Horário</th>
-								<th scope="col">Local</th>
-								<th scope="col">Dirigente</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">Terças-feiras</th>
-								<td>15:00</td>
-								<td>Casa de Elísio</td>
-								<td>Mário</td>
-							</tr>
-							<tr>
-								<th scope="row">Quartas-feiras</th>
-								<td>08:50</td>
-								<td>Casa de Josenildo</td>
-								<td>Raimundo</td>
-							</tr>
-							<tr>
-								<th scope="row">Sextas-feiras</th>
-								<td>08:50</td>
-								<td>Casa de Simone</td>
-								<td>Raimundo</td>
-							</tr>
-							<tr>
-								<th scope="row">Sábados</th>
-								<td>08:50</td>
-								<td>Casa de Jonatas</td>
-								<td>Mário</td>
-							</tr>
-							<tr>
-								<th scope="row">Domingos</th>
-								<td>08:50</td>
-								<td>Grupos</td>
-								<td>Grupos</td>
-							</tr>
-						</tbody>
-					</table>
+					<div>
+						<img src="../assets/images/data/campo.png" alt="Programação Semanal de Serviço de Campo"
+							width="100%" height="100%">
+					</div>
+
+					<h4 style="text-align: center; color: black;"><strong>Observação:</strong> Essa programação vai
+						<em> começar</em> a partir de <em> Sábado, 01 de Junho de 2024. </em>Caso haja mudanças na
+						programaçào informaremos
+						antes. - <a href="https://arc.net/l/quote/mixcudip" target="_blank">(Eclesiastes
+							9:11)</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<h2 style="text-align: center;"><a name="carrinho"><strong>Programação Carrinho /
+								Display</strong></a>
+					</h2>
+					<h4 style="text-align: center; color: black;"><strong>Semana de 20 à 26 de Maio</strong></h4>
+					<div>
+						<img src="../assets/images/data/carrinho.png" alt="Programação Carrinho de 20 a 26 de Maio"
+							width="100%" height="100%">
+					</div>
 				</div>
 			</div>
 		</div>
