--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -65,7 +65,8 @@
 		</div>
 
 		<div class="fh5co-navigation">
-			<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(../assets/images/project-4.jpg)">
+			<div class="fh5co-cover prev fh5co-cover-sm"
+				style="background-image: url(../assets/images/project-5.jpg); border-right: 1px solid black;">
 				<div class="overlay"></div>
 				<a class="copy" href="#designacoes">
 					<div class="display-t">
@@ -96,7 +97,8 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
-					<h1 style="text-align: center;"><a name="designacoes"><strong>Programação Mês de Maio</strong></a>
+					<h1 style="text-align: center; color: black;"><a name="designacoes"><strong>Programação Mês de
+								Maio</strong></a>
 					</h1>
 					<div>
 						<img src="../assets/images/data/vm_02-05-2024.jpeg"
@@ -121,22 +123,62 @@
 				</div>
 
 				<div class="fh5co-entry padding">
-					<h1 style="text-align: center;"><strong>Programação Mês de Junho</strong></h1>
+					<h1 style="text-align: center; color: black;"><strong>Programação Mês de Junho</strong></h1>
 					<div>
 						<img src="../assets/images/data/vm_06-06-2024.jpeg"
-							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+							alt="Reunião Vida e Ministério 06 de Junho de 2024" width="100%" height="100%">
 					</div>
 					<div>
 						<img src="../assets/images/data/vm_13-06-2024.jpeg"
-							alt="Reunião Vida e Ministério 09 de Maio de 2024" width="100%" height="100%">
+							alt="Reunião Vida e Ministério 13 de Junho de 2024" width="100%" height="100%">
 					</div>
 					<div>
 						<img src="../assets/images/data/vm_20-06-2024.jpeg"
-							alt="Reunião Vida e Ministério 16 de Maio de 2024" width="100%" height="100%">
+							alt="Reunião Vida e Ministério 20 de Junho de 2024" width="100%" height="100%">
 					</div>
 					<div>
 						<img src="../assets/images/data/vm_27-06-2024.jpeg"
-							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+							alt="Reunião Vida e Ministério 27 de Junho de 2024" width="100%" height="100%">
+					</div>
+				</div>
+
+				<div class="fh5co-entry padding">
+					<h1 style="text-align: center; color: black;"><strong>Programação Mês de Julho</strong></h1>
+					<div>
+						<img src="../assets/images/data/vm_04-07-2024.jpeg"
+							alt="Reunião Vida e Ministério 04 de Julho de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_11-07-2024.jpeg"
+							alt="Reunião Vida e Ministério 11 de Julho de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_18-07-2024.jpeg"
+							alt="Reunião Vida e Ministério 18 de Julho de 2024" width="100%" height="100%">
+					</div>
+				</div>
+
+				<div class="fh5co-entry padding">
+					<h1 style="text-align: center; color: black;"><strong>Programação Mês de Agosto</strong></h1>
+					<div>
+						<img src="../assets/images/data/vm_01-08-2024.jpeg"
+							alt="Reunião Vida e Ministério 01 de Agosto de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_08-08-2024.jpeg"
+							alt="Reunião Vida e Ministério 08 de Agosto de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_15-08-2024.jpeg"
+							alt="Reunião Vida e Ministério 15 de Agosto de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_22-08-2024.jpeg"
+							alt="Reunião Vida e Ministério 22 de Agosto de 2024" width="100%" height="100%">
+					</div>
+					<div>
+						<img src="../assets/images/data/vm_29-08-2024.jpeg"
+							alt="Reunião Vida e Ministério 29 de Agosto de 2024" width="100%" height="100%">
 					</div>
 				</div>
 			</div>
@@ -158,7 +200,7 @@
 					</tr>
 					<tr>
 						<td>11-05-2024</td>
-						<td>Quem se salvará?</td>
+						<td>O dilúvio dos dias de Noé e você</td>
 					</tr>
 					<tr>
 						<td>18-05-2024</td>
@@ -166,7 +208,7 @@
 					</tr>
 					<tr>
 						<td>25-05-2024</td>
-						<td>... a definir</td>
+						<td>Fortaleça sua confiança em Jeová</td>
 					</tr>
 					<tr>
 						<td>01-06-2024</td>
@@ -182,7 +224,7 @@
 					</tr>
 					<tr>
 						<td>22-06-2024</td>
-						<td>... a definir</td>
+						<td>Você pode encarar o futuro com confiança</td>
 					</tr>
 					<tr>
 						<td>29-06-2024</td>
@@ -191,7 +233,8 @@
 				</tbody>
 			</table>
 
-			<h4 style="text-align: center;"><strong>Observação:</strong> Alguns temas podem mudar sem aviso prévio de
+			<h4 style="text-align: center; color: black;"><strong>Observação:</strong> Alguns temas podem mudar sem
+				aviso prévio de
 				acordo com as circunstâncias - <a href="https://arc.net/l/quote/mixcudip" target="_blank">(Eclesiastes
 					9:11)</a></h4>
 		</div>
