update car, tasks and services and remove medias unused

--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -370,7 +370,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">Sábado - 31/08</th>
-                                    <td>Dielson</td>
+                                    <td>Claudemiro</td>
                                     <td>Dielson</td>
                                     <td>Raimundo</td>
                                     <td>Vitor</td>
