--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -280,7 +280,7 @@
                             >
                         </h2>
                         <h4 style="text-align: center; color: black">
-                            <strong>Semana de 20 à 26 de Maio</strong>
+                            <strong>Semana de 03 à 09 de Junho</strong>
                         </h4>
                         <div>
                             <img
