--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -132,7 +132,7 @@
 
             <div id="fh5co-main-content">
                 <div class="fh5co-post">
-                    <div class="fh5co-entry padding">
+                    <div class="fh5co-entry padding table-responsive">
                         <h2 style="text-align: center">
                             <a name="mecanicas"
                                 ><strong>Atividades Mecânicas</strong></a
