updated data week programa car

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -236,10 +236,10 @@
                         <a name="carrinho"><strong>Programação Carrinho / Display</strong></a>
                     </h2>
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 17 à 23 de Junho</strong>
+                        <strong>Semana de 24 à 30 de Junho</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho.png" alt="Programação Carrinho de 17 a 23 de Junho"
+                        <img src="../assets/images/data/carrinho.jpeg" alt="Programação Carrinho de 24 a 30 de Junho"
                             width="100%" height="100%" />
                     </div>
                 </div>
