--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -238,8 +238,40 @@
                     <h4 style="text-align: center; color: black">
                         <strong>Semana de 24 à 30 de Junho</strong>
                     </h4>
-                    <div>
+                    <div style="margin-bottom: 20px;">
                         <img src="../assets/images/data/carrinho.jpeg" alt="Programação Carrinho de 24 a 30 de Junho"
+                            width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black;">
+                        <strong>Semana de 01 à 07 de Julho</strong>
+                    </h4>
+                    <div style="margin-bottom: 20px;">
+                        <img src="../assets/images/data/carrinho1.jpeg" alt="Programação Carrinho de 01 a 07 de Julho"
+                            width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 08 à 14 de Julho</strong>
+                    </h4>
+                    <div style="margin-bottom: 20px;">
+                        <img src="../assets/images/data/carrinho2.jpeg" alt="Programação Carrinho de 08 a 14 de Julho"
+                            width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 15 à 21 de Julho</strong>
+                    </h4>
+                    <div style="margin-bottom: 20px;">
+                        <img src="../assets/images/data/carrinho3.jpeg" alt="Programação Carrinho de 15 a 21 de Julho"
+                            width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 22 à 28 de Julho</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho4.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
                             width="100%" height="100%" />
                     </div>
                 </div>
