--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -105,7 +105,7 @@
                         <a name="semanal"><strong>Programação Semanal de Campo</strong></a>
                     </h2>
                     <div>
-                        <img src="../assets/images/data/campo.png" alt="Programação Semanal de Serviço de Campo"
+                        <img src="../assets/images/data/campo.jpeg" alt="Programação Semanal de Serviço de Campo"
                             width="100%" height="100%" />
                     </div>
 
