--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -105,14 +105,12 @@
                         <a name="semanal"><strong>Programação Semanal de Campo</strong></a>
                     </h2>
                     <div>
-                        <img src="../assets/images/data/campo.jpeg" alt="Programação Semanal de Serviço de Campo"
+                        <img src="../assets/images/data/campoJulho.jpeg" alt="Programação Semanal de Serviço de Campo"
                             width="100%" height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Observação:</strong> Essa programação vai
-                        <em> começar</em> depois que for dado o
-                        <em> anúncio na congregação. </em>Caso haja mudanças
+                        <strong>Observação:</strong> Caso haja mudanças
                         na programaçào informaremos antes. -
                         <a href="https://arc.net/l/quote/mixcudip" target="_blank">(Eclesiastes 9:11)</a>
                     </h4>
@@ -235,14 +233,6 @@
                     <h2 style="text-align: center">
                         <a name="carrinho"><strong>Programação Carrinho / Display</strong></a>
                     </h2>
-                    <h4 style="text-align: center; color: black">
-                        <strong>Semana de 24 à 30 de Junho</strong>
-                    </h4>
-                    <div style="margin-bottom: 20px;">
-                        <img src="../assets/images/data/carrinho.jpeg" alt="Programação Carrinho de 24 a 30 de Junho"
-                            width="100%" height="100%" />
-                    </div>
-
                     <h4 style="text-align: center; color: black;">
                         <strong>Semana de 01 à 07 de Julho</strong>
                     </h4>
