--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -105,7 +105,7 @@
                         <a name="semanal"><strong>Programação Semanal de Campo</strong></a>
                     </h2>
                     <div>
-                        <img src="../assets/images/data/campoJulho.jpeg" alt="Programação Semanal de Serviço de Campo"
+                        <img src="../assets/images/data/campoAgosto.jpeg" alt="Programação Semanal de Serviço de Campo"
                             width="100%" height="100%" />
                     </div>
 
@@ -234,7 +234,7 @@
                         <a name="carrinho"><strong>Programação Carrinho / Display</strong></a>
                     </h2>
                     <h4 style="text-align: center; color: black;">
-                        <strong>Semana de 01 à 07 de Julho</strong>
+                        <strong>Semana de 29 de Julho à 04 de Agosto</strong>
                     </h4>
                     <div style="margin-bottom: 20px;">
                         <img src="../assets/images/data/carrinho1.jpeg" alt="Programação Carrinho de 01 a 07 de Julho"
@@ -242,7 +242,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 08 à 14 de Julho</strong>
+                        <strong>Semana de 05 à 11 de Agosto</strong>
                     </h4>
                     <div style="margin-bottom: 20px;">
                         <img src="../assets/images/data/carrinho2.jpeg" alt="Programação Carrinho de 08 a 14 de Julho"
@@ -250,7 +250,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 15 à 21 de Julho</strong>
+                        <strong>Semana de 12 à 18 de Agosto</strong>
                     </h4>
                     <div style="margin-bottom: 20px;">
                         <img src="../assets/images/data/carrinho3.jpeg" alt="Programação Carrinho de 15 a 21 de Julho"
@@ -258,10 +258,18 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 22 à 28 de Julho</strong>
+                        <strong>Semana de 19 à 25 de Agosto</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho4.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
+                            width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 26 de Agosto a 01 de Setembro</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho5.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
                             width="100%" height="100%" />
                     </div>
                 </div>
