--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -106,24 +106,6 @@
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Julho</strong>
-                    </h1>
-                    <div>
-                        <img src="../assets/images/data/vm_04-07-2024.jpeg"
-                            alt="Reunião Vida e Ministério 04 de Julho de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_11-07-2024.jpeg"
-                            alt="Reunião Vida e Ministério 11 de Julho de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_18-07-2024.jpeg"
-                            alt="Reunião Vida e Ministério 18 de Julho de 2024" width="100%" height="100%" />
-                    </div>
-                </div>
-
-                <div class="fh5co-entry padding">
-                    <h1 style="text-align: center; color: black">
                         <strong>Programação Mês de Agosto</strong>
                     </h1>
                     <div>
@@ -163,22 +145,24 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>06-07-2024</td>
-                        <td>Como enfrentar o futuro com fé e coragem</td>
+                        <td>03-08-2024</td>
+                        <td>Tome posição contra o Diabo</td>
                     </tr>
                     <tr>
-                        <td>13-07-2024</td>
-                        <td>Como se cumprirá a promessa de perfeita felicidade familiar</td>
+                        <td>10-08-2024</td>
+                        <td>Você pode encarar o futuro com confiança</td>
                     </tr>
                     <tr>
-                        <td>20-07-2024</td>
-                        <td>
-                            Imite a misericórdia de Jeová
-                        </td>
+                        <td>17-08-2024</td>
+                        <td>Você é importante para Deus?</td>
                     </tr>
                     <tr>
-                        <td>27-07-2024</td>
-                        <td>[Congresso de 2024] - Declare as Boas Novas!</td>
+                        <td>24-08-2024</td>
+                        <td>Os problemas de hoje logo serão coisas do passado</td>
+                    </tr>
+                    <tr>
+                        <td>31-08-2024</td>
+                        <td>Você está no caminho para a vida eterna?</td>
                     </tr>
                 </tbody>
             </table>
