feat: add content september 2024

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -98,12 +98,29 @@
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
+						<h3><a name="congresso"><strong>Anúncio Sobre a Assembleia de Circuito</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que a nossa próxima Assembleia de
+							Circuito
+							com o superintendente de circuito será...
+							<em>no domingo,</em><strong> 17 de novembro de 2024.</strong>
+						</p>
+						<p>Local: Salão de Assembleias das Testemunhas de Jeová em Camaçari - <strong>Auditório
+								A</strong></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
 						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a>
 						</h3>
 						<p>Prezados irmãos,</p>
 						<p style="padding-left: 40px;">Temos o prazer de informá-los sobre a próxima visita do
 							Superintendente de Circuito.
-							<em>Data da visita:</em><strong> de 30 de Julho a 04 de Agosto de 2024.</strong>
+							<em>Data da visita:</em><strong> A Ser Anunciada.</strong>
 						</p>
 						<p>Superintendente de Circuito - <strong>Divanildo Mercês</strong></p>
 					</div>
