--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -59,7 +59,7 @@
             </nav>
             <div class="page-title">
                 <img src="../assets/images/person_1.jpg" alt="Atividades Mecanicas" />
-                <span>Maio de 2024</span>
+                <span>Ano de 2024</span>
                 <h3>
                     Designações das Atividades nas Reuniões - presidência,
                     leitores e mecânicas
@@ -112,93 +112,6 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Agosto</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Palco</th>
-                                <th scope="col">Porta</th>
-                                <th scope="col">Microfone 1</th>
-                                <th scope="col">Microfone 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Quinta-feira - 01/08</th>
-                                <td>Elísio</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
-                                <td>Claudemiro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 03/08</th>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 08/08</th>
-                                <td>Vitor</td>
-                                <td>Dielson</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 10/08</th>
-                                <td>Elísio</td>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
-                                <td>Raimundo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 15/08</th>
-                                <td>Vitor</td>
-                                <td>Raimundo</td>
-                                <td>Pedro</td>
-                                <td>Dielson</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 17/08</th>
-                                <td>Mário</td>
-                                <td>Vitor</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 22/08</th>
-                                <td>Elísio</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 24/08</th>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
-                                <td>Claudemiro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 29/08</th>
-                                <td>Elísio</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 31/08</th>
-                                <td>Claudemiro</td>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <h4 style="text-align: center; color: black">
                         <strong>Mês de Setembro</strong>
                     </h4>
                     <table class="table table-striped">
@@ -214,59 +127,139 @@
                         <tbody>
                             <tr>
                                 <th scope="row">Quinta-feira - 05/09</th>
-                                <td>Elísio</td>
-                                <td>Raimundo</td>
                                 <td>Vitor</td>
-                                <td>Claudemiro</td>
+                                <td>Dielson</td>
+                                <td>Dielson</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
                                 <th scope="row">Sábado - 07/09</th>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
+                                <td>Everton</td>
+                                <td>Raimundo</td>
                                 <td>Jonatan</td>
+                                <td>Dielson</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 12/09</th>
+                                <td>Mário</td>
                                 <td>Vitor</td>
-                                <td>Dielson</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
+                                <td>Pedro</td>
+                                <td>Raimundo</td>
                             </tr>
                             <tr>
                                 <th scope="row">Sábado - 14/09</th>
                                 <td>Elísio</td>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
                                 <td>Raimundo</td>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 19/09</th>
-                                <td>Vitor</td>
-                                <td>Raimundo</td>
-                                <td>Pedro</td>
+                                <td>Everton</td>
                                 <td>Dielson</td>
+                                <td>Jonatan</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
                                 <th scope="row">Sábado - 21/09</th>
                                 <td>Mário</td>
-                                <td>Vitor</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 26/09</th>
-                                <td>Elísio</td>
-                                <td>Claudemiro</td>
+                                <td>Raimundo</td>
                                 <td>Jonatan</td>
                                 <td>Pedro</td>
                             </tr>
                             <tr>
+                                <th scope="row">Quinta-feira - 26/09</th>
+                                <td>Vitor</td>
+                                <td>Raimundo</td>
+                                <td>Jonatan</td>
+                                <td>Dielson</td>
+                            </tr>
+                            <tr>
                                 <th scope="row">Sábado - 28/09</th>
                                 <td>Dielson</td>
+                                <td>Everton</td>
+                                <td>Vitor</td>
+                                <td>Pedro</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Mês de Outubro</strong>
+                    </h4>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Data</th>
+                                <th scope="col">Palco</th>
+                                <th scope="col">Porta</th>
+                                <th scope="col">Microfone 1</th>
+                                <th scope="col">Microfone 2</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Quinta-feira - 03/10</th>
+                                <td>Elísio</td>
+                                <td>Raimundo</td>
+                                <td>Dielson</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sábado - 05/10</th>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                                <td>Raimundo</td>
+                                <td>Claudemiro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 10/10</th>
+                                <td>Everton</td>
+                                <td>Dielson</td>
+                                <td>Pedro</td>
+                                <td>Mário</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sábado - 12/10</th>
+                                <td>Vitor</td>
+                                <td>Raimundo</td>
+                                <td>Dielson</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 17/10</th>
+                                <td>Mário</td>
+                                <td>Dielson</td>
+                                <td>Jonatas</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sábado - 19/10</th>
+                                <td>Elisio</td>
+                                <td>Jonatas</td>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 24/10</th>
+                                <td>Dielson</td>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                                <td>Pedro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sábado - 26/10</th>
+                                <td>Vitor</td>
+                                <td>Jonatas</td>
+                                <td>Dielson</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 31/10</th>
+                                <td>Everton</td>
                                 <td>Raimundo</td>
                                 <td>Vitor</td>
-                                <td>Claudemiro</td>
+                                <td>Pedro</td>
                             </tr>
                         </tbody>
                     </table>
@@ -277,46 +270,6 @@
                         <a name="ensino"><strong>Presidência aos Sábados e Leitor de A
                                 Sentinela</strong></a>
                     </h2>
-                    <h4 style="text-align: center; color: black">
-                        <strong>Mês de Agosto</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Presidente</th>
-                                <th scope="col">Leitor de A Sentinela</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">03/08</th>
-                                <td>José Raimundo</td>
-                                <td style="color: red">Visita do S.C.</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">10/08</th>
-                                <td>Claudemiro Rodrigues</td>
-                                <td>Marcos Vitor</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">17/08</th>
-                                <td>Elísio Chagas</td>
-                                <td>Josenildo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">24/08</th>
-                                <td>Mário Júnior</td>
-                                <td>Dielson Paz</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">31/08</th>
-                                <td>Paulo Henrique</td>
-                                <td>Claudemiro Rodrigues</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
                     <h4 style="text-align: center; color: black">
                         <strong>Mês de Setembro</strong>
                     </h4>
@@ -348,6 +301,41 @@
                                 <th scope="row">28/09</th>
                                 <td>Elísio Chagas</td>
                                 <td>Paulo Henrique</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Mês de Outubro</strong>
+                    </h4>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Data</th>
+                                <th scope="col">Presidente</th>
+                                <th scope="col">Leitor de A Sentinela</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">05/10</th>
+                                <td>Paulo Henrique</td>
+                                <td>Everton</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">12/10</th>
+                                <td>Everton</td>
+                                <td>Marcos Vitor</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">19/10</th>
+                                <td>José Raimundo</td>
+                                <td>Dielson Paz</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">26/10</th>
+                                <td>Elisio Chagas</td>
+                                <td>Josenildo Cruz</td>
                             </tr>
                         </tbody>
                     </table>
