--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -104,9 +104,10 @@
                     <h2 style="text-align: center">
                         <a name="semanal"><strong>Programação Semanal de Campo</strong></a>
                     </h2>
+
                     <div>
-                        <img src="../assets/images/data/campoAgosto.jpeg" alt="Programação Semanal de Serviço de Campo"
-                            width="100%" height="100%" />
+                        <img src="../assets/images/data/campoSetembro.jpeg"
+                            alt="Programação Semanal de Serviço de Campo" width="100%" height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
@@ -233,37 +234,6 @@
                     <h2 style="text-align: center">
                         <a name="carrinho"><strong>Programação Carrinho / Display</strong></a>
                     </h2>
-                    <h4 style="text-align: center; color: black;">
-                        <strong>Semana de 29 de Julho à 04 de Agosto</strong>
-                    </h4>
-                    <div style="margin-bottom: 20px;">
-                        <img src="../assets/images/data/carrinho1.jpeg" alt="Programação Carrinho de 01 a 07 de Julho"
-                            width="100%" height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Semana de 05 à 11 de Agosto</strong>
-                    </h4>
-                    <div style="margin-bottom: 20px;">
-                        <img src="../assets/images/data/carrinho2.jpeg" alt="Programação Carrinho de 08 a 14 de Julho"
-                            width="100%" height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Semana de 12 à 18 de Agosto</strong>
-                    </h4>
-                    <div style="margin-bottom: 20px;">
-                        <img src="../assets/images/data/carrinho3.jpeg" alt="Programação Carrinho de 15 a 21 de Julho"
-                            width="100%" height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Semana de 19 à 25 de Agosto</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho4.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
-                            width="100%" height="100%" />
-                    </div>
 
                     <h4 style="text-align: center; color: black">
                         <strong>Semana de 26 de Agosto a 01 de Setembro</strong>
@@ -271,6 +241,38 @@
                     <div>
                         <img src="../assets/images/data/carrinho5.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
                             width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 02 a 08 de Setembro</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho1.jpeg"
+                            alt="Programação Carrinho de 02 a 08 de Setembro" width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 09 a 15 de Setembro</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho2.jpeg"
+                            alt="Programação Carrinho de 09 a 15 de Setembro" width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 16 a 22 de Setembro</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho3.jpeg"
+                            alt="Programação Carrinho de 16 a 22 de Setembro" width="100%" height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 23 a 29 de Setembro</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho4.jpeg"
+                            alt="Programação Carrinho de 23 a 29 de Setembro" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
