--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -109,24 +109,56 @@
                         <strong>Programação Mês de Agosto</strong>
                     </h1>
                     <div>
-                        <img src="../assets/images/data/vm_01-08-2024.jpeg"
-                            alt="Reunião Vida e Ministério 01 de Agosto de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_08-08-2024.jpeg"
-                            alt="Reunião Vida e Ministério 08 de Agosto de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_15-08-2024.jpeg"
-                            alt="Reunião Vida e Ministério 15 de Agosto de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_22-08-2024.jpeg"
-                            alt="Reunião Vida e Ministério 22 de Agosto de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
                         <img src="../assets/images/data/vm_29-08-2024.jpeg"
                             alt="Reunião Vida e Ministério 29 de Agosto de 2024" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Setembro</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_05-09-2024.jpeg"
+                            alt="Reunião Vida e Ministério 05 de Setembro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_12-09-2024.jpeg"
+                            alt="Reunião Vida e Ministério 12 de Setembro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_19-09-2024.jpeg"
+                            alt="Reunião Vida e Ministério 19 de Setembro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_26-09-2024.jpeg"
+                            alt="Reunião Vida e Ministério 26 de Setembro de 2024" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Outubro</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_03-10-2024.jpeg"
+                            alt="Reunião Vida e Ministério 03 de Outubro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_10-10-2024.jpeg"
+                            alt="Reunião Vida e Ministério 10 de Outubro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_17-10-2024.jpeg"
+                            alt="Reunião Vida e Ministério 17 de Outubro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_24-10-2024.jpeg"
+                            alt="Reunião Vida e Ministério 24 de Outubro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_31-10-2024.jpeg"
+                            alt="Reunião Vida e Ministério 31 de Outubro de 2024" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
